# sudoku

./: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml  sudoku.cabal
app/: Main.hs
ex/: 4_1.txt  4_2.txt  9_1.txt  9_2.txt
src/: Options.hs  Parser.hs  Solver.hs
src/Propositional/: Core.hs  MSatPort.hs  MsatParser.hs  NormalForm.hs  Parser.hs  Utils.hs
