name:                sudoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/somnus0208/sudoku#readme
license:             Apache
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solver
                     , Parser
                     , Options
                     , Propositional.MSatPort
                     , Propositional.Core
                     , Propositional.NormalForm
                     , Propositional.MsatParser
                     , Propositional.Utils
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , split
                     , parsec-numbers
                     , process
                     , temporary
                     , directory
                     , containers
  default-language:    Haskell2010

executable sdks
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sudoku
  default-language:    Haskell2010

test-suite sdks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sudoku
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/somnus0208/sudoku
